Add cloner notes

--- a/public/wifi.html
+++ b/public/wifi.html
@@ -44,7 +44,15 @@
 			</p>
 			<p class="helptopic">
 				<span>clonerlog:</span>
-				Shows the log of all confirmed clonings of the past month. Requires Room Driver.
+				Shows the log of all confirmed clonings of the past month. Requires Room Driver or cloner whitelist.
+			</p>
+			<p class="helptopic">
+				<span>clonernote (user, note):</span>
+				Adds a new modnote for user. Requires Room Driver or cloner whitelist.
+			</p>
+			<p class="helptopic">
+				<span>clonernotes:</span>
+				Gives a link to a page to view all cloner modnotes. Requires Room Driver or cloner whitelist.
 			</p>
         </div>
 		
