Improve and document .repeats

--- a/public/commands.html
+++ b/public/commands.html
@@ -119,6 +119,9 @@
                 <p class="helptopic">
                     <span>clearrepeats:</span> Stops all repeating messages in this room. Requires Room Driver in the room.
                 </p>
+                <p class="helptopic">
+                    <span>repeats (room):</span> Shows all repeats in a room, and allows you to remove specific ones. Requires Room Driver in the room.
+                </p>
             </div>
             <div>
                 <h2 id="userlist">Userlist:</h2>
