Add help commands

--- a/public/commands.html
+++ b/public/commands.html
@@ -31,6 +31,21 @@
                 </p>
             </div>
             <div>
+                <h2 id="approvals">Approvals (only for cosmopolitan and youtube):</h2>
+                <p class="helptopic">
+                    <span>requestapproval url, description:</span> Requests approval to share a link in the chat.
+                </p>
+                <p class="helptopic">
+                    <span>link url, description:</span> Links a url in chat without requesting approval. Requires you to be whitelisted or have a rank in the room.
+                </p>
+                <p class="helptopic">
+                    <span>approve/reject:</span> Approves or rejects a url. Requires Room Driver.
+                </p>
+                <p class="helptopic">
+                    <span>whitelist username:</span> Whitelists a user for sharing links. Requires Room Driver.
+                </p>
+            </div>
+            <div>
                 <h2 id="hangman">Hangman:</h2>
                 <p class="helptopic">
                     <span>addhangman room, solution, hint:</span> Adds a word to the list of possible words for .hangman. Requires Room Driver.
