Allow approval commands in every room

--- a/public/commands.html
+++ b/public/commands.html
@@ -31,7 +31,7 @@
                 </p>
             </div>
             <div>
-                <h2 id="approvals">Approvals (only for cosmopolitan and youtube):</h2>
+                <h2 id="approvals">Approvals:</h2>
                 <p class="helptopic">
                     <span>requestapproval url, description:</span> Requests approval to share a link in the chat.
                 </p>
