Update wifi help

--- a/public/wifi.html
+++ b/public/wifi.html
@@ -59,7 +59,7 @@
 		<div>
 			<h2 id="scammers">Scammer list:</h2>
 			<p class="helptopic">
-				<span>addscammer (main, alts, ign, fc, evidence, reason):</span>
+				<span>addscammer (main, alts, ign, fc, reason):</span>
 				Adds a scammer to the scammer list. If you wish to have commas in any of the fields, use '|' as the separator instead of ','. Requires Room Driver.
 			</p>
 			<p class="helptopic">
@@ -68,7 +68,7 @@
 			</p>
 			<p class="helptopic">
 				<span>updatescammer (username, [key: value, key: value]):</span>
-				Updates the information of a scammer. Possible values for keys are: <strong>alts, fc, ign, evidence, reason, addedby</strong>. If you wish to have commas in any of the fields, use '|' as the separator instead of ','. Room Drivers can edit any scammer's info.
+				Updates the information of a scammer. Possible values for keys are: <strong>alts, fc, ign, reason, addedby</strong>. If you wish to have commas in any of the fields, use '|' as the separator instead of ','. Room Drivers can edit any scammer's info.
 			</p>
 			<p class="helptopic">
 				<span>addscammeralt (username, alt1[, alt2, alt3...]):</span>
