--- a/public/commands.html
+++ b/public/commands.html
@@ -56,6 +56,9 @@
                 <p class="helptopic">
                     <span>hangman:</span> Starts a hangman game with a random solution, selected from the list for this room.
                 </p>
+                <p class="helptopic">
+                    <span>viewhangman room:</span> Sends you a link to a page with all hangman words for the room. Requires Room Driver.
+                </p>
             </div>
             <div>
                 <h2 id="help">Help:</h2>
@@ -116,6 +119,12 @@
             </div>
             <div>
                 <h2 id="social">Social:</h2>
+                <p class="helptopic">
+                    <span>daily (topic):</span> Shows the daily topic in the room.
+                </p>
+                <p class="helptopic">
+                    <span>daily (room, topic, image, message):</span> Sets the daily topic in a room. Image link is optional and can be omitted. Requires Room Driver.
+                </p>
                 <p class="helptopic">
                     <span>motd:</span> Displays the current message of the day for the room. This command can be used in PM by specifying the room after the command.<br/> Options: announcemotd - use /wall when displaying the motd.
                 </p>
