--- a/public/wifi.html
+++ b/public/wifi.html
@@ -86,7 +86,7 @@
 				The identifier for editing and deleting hacked mons is <code>species-day-month-year</code>. Use this in <code>.removehackmon</code> and <code>updatehackmon</code>. It is not needed for adding mons.
 			</p>
 			<p class="helptopic">
-				<span>addhackmon (species, ot, tid, details, reasoning, notes):</span>
+				<span>addhackmon (species, ot, tid, details, reasoning):</span>
 				Adds a hackmon to the hacked mons list. If you wish to have commas in any of the fields, use '|' as the separator instead of ','. Requires Room Driver.
 			</p>
 			<p class="helptopic">
