--- a/public/commands.html
+++ b/public/commands.html
@@ -44,6 +44,9 @@
                 <p class="helptopic">
                     <span>whitelist username:</span> Whitelists a user for sharing links. Requires Room Driver.
                 </p>
+                <p class="helptopic">
+                    <span>viewwhitelist:</span> Shows you the list of all whitelisted users. Requires Room Driver.
+                </p>
             </div>
             <div>
                 <h2 id="hangman">Hangman:</h2>
@@ -94,6 +97,12 @@
                 </p>
                 <p class="helptopic">
                     <span>topusers (room [, today|0-24]):</span> Shows the 5 most active users in the given room the past month. If 'today' is passed as an additional parameter, shows the most active users today. If a number between 0 and 24 is passed as an additional parameter, shows the most active users during that hour of the day (GMT). Requires Room Driver.
+                </p>
+            </div>
+            <div>
+                <h2 id="mail">Mail:</h2>
+                <p class="helptopic">
+                    <span>mail user, message</span> Sends a mail to user. Can only be used by roomstaff and global auth.
                 </p>
             </div>
             <div>
