Allow ROs to throttle repeats in rooms during dead hours

--- a/public/commands.html
+++ b/public/commands.html
@@ -155,6 +155,9 @@
                 <p class="helptopic">
                     <span>repeats (room):</span> Shows all repeats in a room, and allows you to remove specific ones. Requires Room Driver in the room.
                 </p>
+                <p class="helptopic">
+                    <span>throttlerepeats (room, start, end, amount):</span> Makes it so repeats only show 1/amount of times between start and end o'clock. Requires Room Owner.
+                </p>
             </div>
             <div>
                 <h2 id="userlist">Userlist:</h2>
