Add an alias system

--- a/public/commands.html
+++ b/public/commands.html
@@ -180,13 +180,13 @@
                     <span>tour set shop, on|off:</span> Sets whether the scoreboard should indicate that points can be spent on prizes. Don't enable this if there are no prizes. Requires Room Owner.
                 </p>
                 <p class="helptopic">
-                    <span>addtp (user, amount[, total]):</span> Adds points to user and total points to the total. If left out, total defaults to the amount. Requires Tour helper.
+                    <span>addpoints (user, amount[, total]):</span> Adds points to user and total points to the total. If left out, total defaults to the amount. Requires Tour helper.
                 </p>   
                 <p class="helptopic">
-                    <span>removetp (user, amount[, total]):</span> Removes points from user and total points from the total. If left out, total defaults to the amount. Requires Tour helper.
+                    <span>removepoints (user, amount[, total]):</span> Removes points from user and total points from the total. If left out, total defaults to the amount. Requires Tour helper.
                 </p>
                 <p class="helptopic">
-                    <span>resettp:</span> Decays the points and deletes inactive users from the scoreboard. Requires Room Owner.
+                    <span>resetpoints:</span> Decays the points and deletes inactive users from the scoreboard. Requires Room Owner.
                 </p>                     
             </div>
             <div>
