--- a/public/commands.html
+++ b/public/commands.html
@@ -110,6 +110,15 @@
                 <p class="helptopic">
                     Use the settings feature to edit settings for bot moderation in the rooms you're Room Owner in.
                 </p>
+                <p class="helptopic">
+                    <span>notol (room, user):</span> Adds the user to the zero tolerance list of the room, causing all punishments on the user to be harsher. Requires Room Moderator.
+                </p>
+                <p class="helptopic">
+                    <span>removenotol (room, user):</span> Removes the user from the zero tolerance list of the room. Requires Room Moderator.
+                </p>
+                <p class="helptopic">
+                    <span>viewnotol (room):</span> Shows the zero tolerance list of the room. Requires Room Driver.
+                </p>
             </div>
             <div>
                 <h2 id="quotes">Quotes:</h2>
