better self promotion

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Kid A</title>
+    <title>bumba.me home page</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -12,10 +12,11 @@
         <div style="float:left;width:60%;">
             <h2 id="intro">What is this website?</h2>
             <p class="body">
-                This website is generated using the webserver contained in the <a href="https://github.com/bumbadadabum/Kid-A">Kid A Pokémon Showdown Chat Bot</a>. While there is no real navigation present on the website itself, a variety of the available pages are linked by the chat bot on Pokémon Showdown itself. Additionally, there will be a few links available at the bottom of the page for a better explanation of the features of the bot, and how it can be used on Pokémon Showdown. If you wish to contact the creator of the website and bot, it's best to reach me on Pokémon Showdown (bumbadadabum).
+                This website is generated using my own webserver contained in my chat bot. While there is no real navigation present on the website itself, a variety of the available pages are linked by the chat bot on Pokémon Showdown itself. Additionally, there will be a few links available at the bottom of the page for a better explanation of the features of the Pokémon Showdown bot and how it can be used, as well as my portfolio. If you wish to contact the creator of the website and bot, it's best to reach me on Discord (bumbadadabum#0321), via E-mail (<a href="mailto:bumba@pokemonshowdown.com">bumba@pokemonshowdown.com</a>), or on Pokémon Showdown (~bumbadadabum).
             </p>
             <h3>Links:</h3>
             <ul>
+                <li><a href="./portfolio.html">My portfolio</a></li>
                 <li><a href="./intro.html">Introduction to usage of the bot for Room Owners on PS.</a></li>
                 <li><a href="./commands.html">List of available bot commands.</a></li>
             </ul>
