Allow hard resets of tour points

--- a/public/commands.html
+++ b/public/commands.html
@@ -195,7 +195,7 @@
                     <span>removepoints (user, amount[, total]):</span> Removes points from user and total points from the total. If left out, total defaults to the amount. Requires Tour helper.
                 </p>
                 <p class="helptopic">
-                    <span>resetpoints:</span> Decays the points and deletes inactive users from the scoreboard. Requires Room Owner.
+                    <span>resetpoints [hard]:</span> Decays the points and deletes inactive users from the scoreboard. If the argument 'hard' is supplied, resets all points instead of merely decaying. Requires Room Owner.
                 </p>                     
             </div>
             <div>
