Add .profile to help

--- a/public/commands.html
+++ b/public/commands.html
@@ -121,6 +121,15 @@
                 </p>
             </div>
             <div>
+                <h2 id="profiles">Profiles:</h2>
+                <p class="helptopic">
+                    <span>profile (username):</span> Shows the user's profile, or your own profile if no username is supplied.
+                </p>
+                <p class="helptopic">
+                    <span>editprofile:</span> Sends you a link to edit or create your profile. Avatar on the profile is set to your current PS avatar when you press submit.
+                </p>
+            </div>
+            <div>
                 <h2 id="quotes">Quotes:</h2>
                 <p class="helptopic">
                     <span>quote (quote):</span> Adds the given quote to the quote page for this room. Requires Room Driver in the room.
