Revamp notol list

--- a/public/commands.html
+++ b/public/commands.html
@@ -111,7 +111,7 @@
                     Use the settings feature to edit settings for bot moderation in the rooms you're Room Owner in.
                 </p>
                 <p class="helptopic">
-                    <span>notol (room, user):</span> Adds the user to the zero tolerance list of the room, causing all punishments on the user to be harsher. Requires Room Moderator.
+                    <span>notol (room, user, description):</span> Adds the user to the zero tolerance list of the room, causing all punishments on the user to be harsher. Requires Room Moderator.
                 </p>
                 <p class="helptopic">
                     <span>removenotol (room, user):</span> Removes the user from the zero tolerance list of the room. Requires Room Moderator.
@@ -146,12 +146,6 @@
             </div>
             <div>
                 <h2 id="social">Social:</h2>
-                <p class="helptopic">
-                    <span>daily (topic):</span> Shows the daily topic in the room.
-                </p>
-                <p class="helptopic">
-                    <span>daily (room, topic, image, message):</span> Sets the daily topic in a room. Image link is optional and can be omitted. Requires Room Driver.
-                </p>
                 <p class="helptopic">
                     <span>motd:</span> Displays the current message of the day for the room. This command can be used in PM by specifying the room after the command.<br/> Options: announcemotd - use /wall when displaying the motd.
                 </p>
