--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
         <div style="float:left;width:60%;">
             <h2 id="intro">What is this website?</h2>
             <p class="body">
-                This website is generated using my own webserver contained in my chat bot. While there is no real navigation present on the website itself, a variety of the available pages are linked by the chat bot on Pokémon Showdown itself. Additionally, there will be a few links available at the bottom of the page for a better explanation of the features of the Pokémon Showdown bot and how it can be used, as well as my portfolio. If you wish to contact the creator of the website and bot, it's best to reach me on Discord (bumbadadabum#0321), via E-mail (<a href="mailto:bumba@pokemonshowdown.com">bumba@pokemonshowdown.com</a>), or on Pokémon Showdown (~bumbadadabum).
+                This website is generated using my own webserver contained in my chat bot. While there is no real navigation present on the website itself, a variety of the available pages are linked by the chat bot on Pokémon Showdown itself. Additionally, there will be a few links available at the bottom of the page for a better explanation of the features of the Pokémon Showdown bot and how it can be used, as well as my portfolio. If you wish to contact the creator of the website and bot, it's best to reach me on Discord (Astrid#0420), via E-mail (<a href="mailto:bumba@pokemonshowdown.com">bumba@pokemonshowdown.com</a>), or on Pokémon Showdown (~Asheviere).
             </p>
             <h3>Links:</h3>
             <ul>
